; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r8192E_core.c_rtl8192_handle_beacon.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r8192E_core.c_rtl8192_handle_beacon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ieee80211_beacon = type { i32 }
%struct.ieee80211_network = type { i32 }
%struct.r8192_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ieee80211_beacon*, %struct.ieee80211_network*)* @rtl8192_handle_beacon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8192_handle_beacon(%struct.net_device* %0, %struct.ieee80211_beacon* %1, %struct.ieee80211_network* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ieee80211_beacon*, align 8
  %6 = alloca %struct.ieee80211_network*, align 8
  %7 = alloca %struct.r8192_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ieee80211_beacon* %1, %struct.ieee80211_beacon** %5, align 8
  store %struct.ieee80211_network* %2, %struct.ieee80211_network** %6, align 8
  %8 = load %struct.net_device*, %struct.net_device** %4, align 8
  %9 = call %struct.r8192_priv* @ieee80211_priv(%struct.net_device* %8)
  store %struct.r8192_priv* %9, %struct.r8192_priv** %7, align 8
  %10 = load %struct.r8192_priv*, %struct.r8192_priv** %7, align 8
  %11 = load %struct.ieee80211_network*, %struct.ieee80211_network** %6, align 8
  %12 = call i32 @rtl8192_qos_handle_probe_response(%struct.r8192_priv* %10, i32 1, %struct.ieee80211_network* %11)
  %13 = load %struct.r8192_priv*, %struct.r8192_priv** %7, align 8
  %14 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.r8192_priv*, %struct.r8192_priv** %7, align 8
  %17 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %16, i32 0, i32 0
  %18 = call i32 @queue_delayed_work(i32 %15, i32* %17, i32 0)
  ret i32 0
}

declare dso_local %struct.r8192_priv* @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @rtl8192_qos_handle_probe_response(%struct.r8192_priv*, i32, %struct.ieee80211_network*) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
